# dependal-py

./: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
dependal/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: CallerTypeEnum.md  DnsRecordTypeEnum.md  DomainStatusEnum.md  DomainsApi.md  ErrorBody.md  ErrorCode.md  ErrorResponse.md  EventGroupEnum.md  MessageStatus.md  MessageStatusEnum.md  MessageStatusResponse.md  MessagesApi.md  ProviderEnum.md  ProviderEventTypeEnum.md  SendEmailRequest.md  SendEmailResponse.md  SendEmailResult.md  SesVerificationStatusEnum.md  SourceEnum.md  StageEnum.md  TenantApi.md  TenantDomain.md  TenantDomainCheck.md  TenantDomainCheckResponse.md  TenantDomainCreate.md  TenantDomainCreateRequest.md  TenantDomainCreateResponse.md  TenantDomainDetail.md  TenantDomainDetailResponse.md  TenantDomainRecord.md  TenantDomainSesStatus.md  TenantDomainsResponse.md  TenantMessage.md  TenantMessageEvent.md  TenantMessageEventCommonHeaders.md  TenantMessageEventDelivery.md  TenantMessageEventHeader.md  TenantMessageEventMail.md  TenantMessageEventsPage.md  TenantMessageEventsResponse.md  (+10 more)
test/: test_caller_type_enum.py  test_dns_record_type_enum.py  test_domain_status_enum.py  test_domains_api.py  test_error_body.py  test_error_code.py  test_error_response.py  test_event_group_enum.py  test_message_status.py  test_message_status_enum.py  test_message_status_response.py  test_messages_api.py  test_provider_enum.py  test_provider_event_type_enum.py  test_send_email_request.py  test_send_email_response.py  test_send_email_result.py  test_ses_verification_status_enum.py  test_source_enum.py  (+31 more)
(+53 files in other folders)
