[project]
name = "dependal"
version = "1.0.0"
description = "Official Python SDK for the Dependal API."
authors = [
  { name = "Dependal Support", email = "support@dependal.com" }
]
readme = "README.md"
keywords = ["dependal", "email", "transactional-email", "api", "sdk"]
requires-python = ">=3.9"
dependencies = [
  "urllib3>=2.1.0,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
]

[project.urls]
Homepage = "https://dependal.com"
Repository = "https://github.com/dependal/python-sdk"
Documentation = "https://dependal.com/docs"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=2.8.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
types-python-dateutil = ">=2.8.19.14"
mypy = ">=1.5"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "dependal",
  "tests",
]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "dependal.configuration",
]
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true